[gd_scene load_steps=6 format=2]

[ext_resource path="res://Src/Enemy/Skin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/Enemy_Move_Loop.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 7 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 67
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Skin" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 18 )
shape = SubResource( 1 )

[node name="Idle_Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Attack_Range" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range"]
position = Vector2( -1, 18 )
shape = SubResource( 2 )

[node name="Sounds" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
[connection signal="timeout" from="Idle_Cooldown" to="." method="_on_Idle_Cooldown_timeout"]
[connection signal="body_entered" from="Attack_Range" to="." method="_on_Attack_Range_body_entered"]
